compatibilité rei v1.0